--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ management:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/rnrtracker?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
+    url: jdbc:mysql://localhost:3306/rnrtracker1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
