--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>RnRTracker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>RnRTracker</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot RnRTracker</description>
 	<properties>
 		<java.version>11</java.version>
