--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -16,11 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
+        java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Archive artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: ClairthonBackend
+        path: |
+          target/*.jar
+          !target/original-*.jar
