--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B clean install
+      run: mvn -B package -DskipTests --file pom.xml
     - name: Archive artifacts
       uses: actions/upload-artifact@v2
       with:
