--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -24,10 +24,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
-    - name: Archive artifacts
-      uses: actions/upload-artifact@v2
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        name: ClairthonBackend
-        path: |
-          target/*.jar
-          !target/original-*.jar
+        aws-access-key-id: ${{ secrets.AWS_SECRET_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_PASS }}
+        aws-region: ap-south-1
+
+    - name: Deploy Jar to S3 bucket
+      run: aws s3 sync ./public/target/*.jar s3://clairthon/ --delete
