--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -32,5 +32,5 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_PASS }}
         aws-region: ap-south-1
 
-    - name: Deploy Jar to S3 bucket
-      run: aws s3 sync ./public/target/*.jar s3://clairthon/ --delete
+    - name: Deploy static site to S3 bucket
+      run: aws s3 sync target/*.jar s3://clairthon --delete
