--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -33,4 +33,4 @@ jobs:
         aws-region: ap-south-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./target/ s3://clairthon --delete --include "*.jar"
+      run: aws s3 sync ./target/ s3://clairthon --delete --exclude "*" --include "RnR*"
