--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -34,3 +34,18 @@ jobs:
 
     - name: Copy Jar File to S3 bucket
       run: aws s3 sync ./target/ s3://clairthon --delete --exclude "*" --include "RnR*"
+  
+  Deploy:
+    - name:  Deploy to EC2
+      env:
+        PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        USER_NAME: admin
+        HOSTNAME: 43.204.246.173
+      run: |
+        echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
+        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME}
+        aws s3 cp s3://clairthon/RnRTracker-0.0.1-SNAPSHOT.jar ~/artifacts/
+        sudo chmod 600 ~/artifacts/*.jar
+        cd ~/artifacts/
+        java -jar RnRTracker-0.0.1-SNAPSHOT.jar
+
