--- a/.github/workflows/clairthon-ci.yml
+++ b/.github/workflows/clairthon-ci.yml
@@ -47,6 +47,7 @@ jobs:
         aws s3 cp s3://clairthon/RnRTracker-0.0.1-SNAPSHOT.jar ~/artifacts/
         sudo chmod 600 ~/artifacts/*.jar
         cd ~/artifacts/
-        nohup java -jar RnRTracker-0.0.1-SNAPSHOT.jar &'
+        chmod +x deploy.sh
+        sh deploy.sh'
         rm -rf private_key.pem
 
