--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,13 +15,11 @@ spring:
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    show-sql: false
+    show-sql: true
     hibernate:
-      ddl-auto: update
-      naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl  
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL55Dialect
-  mvc:
-    pathmatch:
-      matching-strategy: ANT_PATH_MATCHER
