--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+                		<groupId>org.apache.maven.plugins</groupId>
+                		<artifactId>maven-dependency-plugin</artifactId>
+                		<version>2.2</version>
+            		</plugin>
 		</plugins>
 	</build>
 
